--- a/index.html
+++ b/index.html
@@ -118,7 +118,27 @@
                     <p class="recommended">Recommended</p>
                     <div class="plan-info--container">
                         <h3 class="plan-card--title">Anual payment</h3>
-                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--price">99</p>
+                        <p class="plan-card--saving">*Save $129 compare to monthly plan*</p>
+                        <button class="plan-card--ca">I want this <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <p class="recommended">Recommended</p>
+                    <div class="plan-info--container">
+                        <h3 class="plan-card--title">Anual payment</h3>
+                        <p class="plan-card--price">99</p>
+                        <p class="plan-card--saving">*Save $129 compare to monthly plan*</p>
+                        <button class="plan-card--ca">I want this <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <p class="recommended">Recommended</p>
+                    <div class="plan-info--container">
+                        <h3 class="plan-card--title">Anual payment</h3>
+                        <p class="plan-card--price">99</p>
                         <p class="plan-card--saving">*Save $129 compare to monthly plan*</p>
                         <button class="plan-card--ca">I want this <span></span></button>
                     </div>
