--- a/index.html
+++ b/index.html
@@ -124,25 +124,29 @@
                     </div>
                 </article>
 
-                <article class="plans-container--card">
-                    <p class="recommended">Recommended</p>
-                    <div class="plan-info--container">
-                        <h3 class="plan-card--title">Anual payment</h3>
-                        <p class="plan-card--price">99</p>
-                        <p class="plan-card--saving">*Save $129 compare to monthly plan*</p>
-                        <button class="plan-card--ca">I want this <span></span></button>
+                <article class="plans-container--card-two">
+                    <p class="basic">Basic</p>
+                    <div class="plan-info--container-two">
+                        <h3 class="plan-card--title-two">Monthly payment</h3>
+                        <p class="plan-card--price-two">19</p>
+                        <p class="plan-card--saving-two">*Basic plan with all benefits*</p>
+                        <button class="plan-card--ca-two">I want this <span></span></button>
                     </div>
                 </article>
 
-                <article class="plans-container--card">
-                    <p class="recommended">Recommended</p>
-                    <div class="plan-info--container">
-                        <h3 class="plan-card--title">Anual payment</h3>
-                        <p class="plan-card--price">99</p>
-                        <p class="plan-card--saving">*Save $129 compare to monthly plan*</p>
-                        <button class="plan-card--ca">I want this <span></span></button>
+                <article class="plans-container--card-three">
+                    <p class="all-life">Forever</p>
+                    <div class="plan-info--container-three">
+                        <h3 class="plan-card--title-three">One payment</h3>
+                        <p class="plan-card--price-three">199</p>
+                        <p class="plan-card--saving-three">*exclusive for the first 150 customers at a special offer*</p>
+                        <button class="plan-card--ca-three">I want this <span></span></button>
                     </div>
                 </article>
+
+                
+
+               
             </section>
         </section>  
     </main>
